--- a/protected/composer.json
+++ b/protected/composer.json
@@ -8,10 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",        
+        "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "ohmybrew/basic-shopify-api": "^4.0",
+        "ohmybrew/laravel-shopify": "^5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
