--- a/protected/composer.json
+++ b/protected/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/slack-notification-channel": "1.0.x-dev",
         "laravel/tinker": "^1.0",
         "ohmybrew/basic-shopify-api": "^4.0",
         "ohmybrew/laravel-shopify": "^5.0"
